layout bug: home, dossier ok

--- a/public/css/dossier.css
+++ b/public/css/dossier.css
@@ -74,7 +74,7 @@ textarea {
 }
 
 #followWrap {
-    height: 7.2em;
+    height: 8.2em;
     display: flex;
     justify-content: center;
     margin-top: -10.65em;
