--- a/public/css/main.css
+++ b/public/css/main.css
@@ -504,136 +504,6 @@ button {
     margin-top: 4em;
 }
 
-/* ========================
-        DOSSIER PAGE
-   ======================== */
-
-.box {
-    border-bottom: 2px solid;
-    width: 82%;
-}
-
-.topic-box {
-    width: 75%;
-    padding-right: 15%;
-}
-
-.title-topic {
-    text-align: left;
-    margin-bottom: 10px;
-    color: red;
-    font-size: 2em;
-    margin-left: 2%
-}
-
-.topic {
-    text-align: left;
-    margin-top: 0;
-    font-size: 1.5em;
-    margin-left: 2%;
-}
-
-.title-einde {
-    margin-bottom: 10px;
-    font-size: 1.5em;
-}
-
-.timestamp-einde {
-    margin-top: 0;
-    font-size: 1.2em;
-}
-
-.comment-content {
-    width: 82%
-}
-
-.comment-box {
-    border-bottom: 2px solid;
-}
-
-.timestamp-message {
-    width: 5em;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    font-size: 1em !important;
-    color: #575753 !important;
-    font-weight: bold;
-    padding-left: 2%;
-}
-
-.comment-user {
-    text-align: left;
-    margin-top: 0;
-    font-size: 1.5em;
-    margin-left: 2%;
-}
-
-textarea {
-    width: 89%;
-    border: 0;
-    border-bottom: 1px solid;
-    padding: 9px;
-}
-
-.s-more {
-    margin-right: 16em;
-    padding-top: 0;
-    margin-top: 10px;
-    color: dodgerblue !important;
-    font-size: 16px !important;
-}
-
-#followWrap {
-    height: 7.2em;
-    display: flex;
-    justify-content: center;
-    margin-top: -10.65em;
-    margin-bottom: 3em;
-}
-#followItem {
-    height: 50px;
-    background: #e6e6e6;
-    border-bottom: 2px solid;
-    border-left: 2px solid;
-    border-right: 2px solid;
-    border-radius: 0 0 0.5em 0.5em;
-    margin-bottom: 0;
-    width: 9em;
-    align-self: flex-end;
-    font-size: 2.5em;
-    border-color: #cccccc;
-}
-.sticky {
-    position: fixed;
-    top: 1.4em;
-}
-
-#followMenu {
-    width: 20em;
-    float: right;
-    margin-right: -15em;
-    border: 2px solid;
-    border-radius: 0.5em;
-    align-self: flex-end;
-}
-
-#followMenuWrap {
-    display: flex;
-    justify-content: flex-end;
-    padding-top: 0em;
-    height: 15em;
-    margin-top: -11em;
-}
-
-.stickyMenu {
-    position: fixed;
-    right: 19.5em;
-    top: 6em;
-}
-
-h1 {
-    margin: 0.5em 1em;
-}
 
 /* ========================
         VERKIEZING PAGE
@@ -673,133 +543,3 @@ h1 {
 #verk h1 {
     margin: auto;
 }
-
-/* ========================
-        CONTACT PAGE
-   ======================== */
-
-
-.contact{
-    width: 100%;
-    height: auto;
-    margin: 0 auto;
-}
-
-.leftSide h1{
-    text-align: center;
-    color: #ff0000;
-    font-size: 45px;
-}
-
-h2{
-    font-size: 30px;
-}
-
-.leftSide{
-    width:50%;
-    background-color: white;
-    float: left;
-    height: auto;
-    text-align: center;
-    padding-top: 40px;
-    padding-bottom: 40px;
-
-}
-
-.rightSide{
-    width:50%;
-    background-color: #adadad;
-    float: left;
-    height: auto;
-    padding-top: 40px;
-    padding-bottom: 48px;
-    text-align: center;
-
-}
-
-input[type=submit] {
-    padding:5px 15px;
-    background:red;
-    border:0 none;
-    cursor:pointer;
-    -webkit-border-radius: 5px;
-    border-radius: 5px;
-    color: #ffffff;
-    font-weight:bold;
-}
-input, textarea{
-    width: 300px;margin-bottom: 15px;
-}
-
-select{
-    width: 310px;
-    margin-bottom: 15px;
-}
-label{
-    float: left;
-    margin-left: 45px;
-}
-
-.map{
-    height: 100%;
-    width: 100%;
-    left: 0;
-    position: absolute;
-    top: 0;
-    z-index: -1;
-}
-.contact{
-    width: 80%;
-    position: relative;
-}
-
-#gmap{
-    height: 100%;
-    left: 0;
-    position: fixed !important;
-    top: 0;
-    width: 100%;
-    z-index: 1; } /* One increment smaller than the z-index of container */
-
-#container{
-    background: white;
-    border-radius: 20px;
-    border: 3px solid #fff;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
-    margin: 0 auto;
-    overflow: hidden;
-    position: relative;
-    top: 100px;
-    width: 800px;
-    height: auto;
-    z-index: 2; } /* One increment larger than the Google Maps z-index of iframe */
-
-.cardContact {
-    position: relative;
-}
-
-.cardContact .top {
-    display: none;
-    position: absolute;
-    z-index: 99;
-}
-
-.cardContact .contentImg {
-    margin-left: 20px;
-    width: 15%;
-}
-.cardContact:hover .top {
-    display: inline;
-}
-
-.contentImg{
-    width: 5%;
-}
-
-#container form{
-    background-color:  #adadad;
-}
-
-
-
-
